Increased min-width to prevent overflow.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #fafafa;
-	min-width: 930px;
+	min-width: 945px;
 }
 
 a {
